feat(hytale): separate Asset.zip requirement for usage only
With this the launcher requirement only kicks in when either syncing tasks in IDEA
or actually running the devserver, so regular builds and other tasks no longer depend
on the installation existance.

resolves #18